# EAGLE

./: .gitignore  README.md  environment.yml  network_watchdog.sh  ollama_llama31_8b.sh  organize_logs.py  pyproject.toml  requirements.txt  run.sh  run_generation_result_test.py  run_llama_cpp.sh  run_nice.sh  run_ollama.sh  start_llama_server.sh  test_llama  tmux_services.sh
.tmp_export_test/: component_pool.json  generation_1_mo.txt
.tmp_export_test2/: config.json  generation_1_mo.txt
agents/: __init__.py  workspace.py
analysis/: plot_surrogate_alignment.py
config/: llm_endpoints.toml  prompt_templates.toml
configs/: eagle_10x50.yaml  eagle_20x3.yaml  eagle_50x10.yaml  eagle_general_only.yaml  eagle_minimal.yaml  final_test_champions.yaml  minimal_experiment.json
docs/: ARCHITECTURE.md  HANDOFF.md  README.md  TERMINOLOGY.md  architecture.md  architecture_notes.md  architeture_specification_zh.md  config.md  current_eagle_implementation_report.md  developer_checklist.md  eagle_architecture_spec.md  gui.md  gui_refactor_plan.md  java_agent_pipeline.md
eagle/: __init__.py  artifacts.py  candidate.py  config.py  crossover.py  evaluation.py  experiment.py  fitness_history.jsonl  fitness_history_old.jsonl  llm_logging.py  llm_profiles.py  main.py  module_contract.py  mutation.py  offspring.py  operators.py  opponents.py  population.py  project.py  prompts.py  rewrite.py  search.py  selection.py  test_final.py  timing.py
eagle_gui/: __init__.py  app.py  desktop_app.py
eagle_gui_web/: __init__.py  app.py  services.py  state.py  theme.py  ui_actions.py
(+1858 files in other folders)
