[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eagle"
version = "0.1.0"
description = "EAGLE research code with a vendored MicroRTS environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.8,<4",
    "nicegui>=2.0,<3",
    "Pillow>=10,<12",
    "PyYAML>=6,<7",
    "requests>=2.31,<3",
]

[tool.setuptools.packages.find]
include = ["eagle*", "eagle_gui*", "eagle_gui_web*", "scripts*"]
