[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eagle"
version = "0.1.0"
description = "Evolutionary prompt search for generated Java MicroRTS agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.setuptools.packages.find]
include = ["eagle*", "generation*", "agents*", "evaluation*", "scripts*"]
